fix invisible button (#607)

--- a/pulumi-hugo/themes/default/assets/sass/_header.scss
+++ b/pulumi-hugo/themes/default/assets/sass/_header.scss
@@ -63,7 +63,7 @@
     }
 
     .cta-container {
-        @apply hidden;
+        @apply hidden z-10;
 
         @screen lg {
             @apply flex items-center justify-end;
